# Agentic-AI

./: .gitignore  README.md
CSAgent/: .gitignore  PROJECT_STATUS.md  rag-ecommerce-plan.md  rag-ecommerce-plan.md.bak  rag_pipeline.md
CSAgent/backend/: README.md  pyproject.toml
CSAgent/backend/app/: main.py  ticket_repository.py  ticket_schema.py
CSAgent/backend/scripts/: build_catalog.py  build_reviews.py  build_support_kb.py  validate_catalog.py  validate_support_kb.py
CSAgent/data/: README.md
CSAgent/docs/: build-plan.md  catalog-schema.md  data-source.md  knowledge-base.md  (+15 more)
Cartwise/: .gitignore  CLAUDE.md  app.py  main.py  pyproject.toml
vc_deal_review_pipeline/: .gitignore  main.py  pyproject.toml
vc_deal_review_pipeline/data/test_cases/nexus_health_ai/: financial_projects.txt  pitch_deck.txt  term_sheet.txt
vc_deal_review_pipeline/src/vc_deal_review/Compliance/: __init__.py  engine.py  models.py
vc_deal_review_pipeline/src/vc_deal_review/Financial/: engine.py  models.py
vc_deal_review_pipeline/src/vc_deal_review/agents/: __init__.py  __init__.py.bak  base_agent.py  compliance_agent.py  extractor_agent.py  financial_agent.py  financial_agent.py.bak  report_generator_agent.py  risk_agent.py  synthesizer_agent.py
vc_deal_review_pipeline/src/vc_deal_review/schema/: compliance.py  deal_input.py  financials.py  report.py  risk.py  synthesis.py
vc_deal_review_pipeline/src/vc_deal_review/tools/: math_tools.py
vc_deal_review_pipeline/src/vc_deal_review/ui/: dashboard.py
vc_deal_review_pipeline/src/vc_deal_review/utils/: config.py  math_tools.py
(+317 files in other folders)
