[project]
name = "vc-deal-review-pipeline"
version = "0.1.0"
description = "Multi-Agent Venture Capital Deal Review Pipeline"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.9",
    "langchain-anthropic>=1.4.6",
    "langchain-openai>=1.3.2",
    "pydantic>=2.13.4",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true
