[project]
name = "csagent-backend"
version = "0.1.0"
description = "FastAPI backend for the local ecommerce and RAG support app."
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "ipykernel>=7.3.0",
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.3.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.4",
    "truststore>=0.10.4",
    "uvicorn[standard]>=0.49.0",
]
